<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/tvResult1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/tv_res_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvJudge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/tv_judge"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvResult1" />

    <TextView
        android:id="@+id/tvResult2"
        android:layout_width="2dp"
        android:layout_height="14dp"
        android:layout_marginTop="32dp"
        android:text="@string/tv_res_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvJudge" />

    <TextView
        android:id="@+id/tvAppropriate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/tv_appropriate"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvResult2" />

    <TextView
        android:id="@+id/tvOld1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/tv_Old_1"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/numOld"
        app:layout_constraintEnd_toStartOf="@+id/numOld"
        app:layout_constraintTop_toTopOf="@+id/numOld" />

    <TextView
        android:id="@+id/tvKg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/tv_kg"
        app:layout_constraintBottom_toBottomOf="@+id/tvAppropriate"
        app:layout_constraintStart_toEndOf="@+id/tvJudge" />

    <EditText
        android:id="@+id/numOld"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:gravity="right"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/numHight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tvOld2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/tv_Old_2"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/numOld"
        app:layout_constraintStart_toEndOf="@+id/numOld"
        app:layout_constraintTop_toTopOf="@+id/numOld" />

    <TextView
        android:id="@+id/tvHight1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/tv_Hight_1"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/numHight"
        app:layout_constraintEnd_toStartOf="@+id/numHight"
        app:layout_constraintTop_toTopOf="@+id/numHight" />

    <EditText
        android:id="@+id/numHight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:gravity="right"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/numWeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tvWeight1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/tv_Weight_1"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/numWeight"
        app:layout_constraintEnd_toStartOf="@+id/numWeight"
        app:layout_constraintTop_toTopOf="@+id/numWeight" />

    <EditText
        android:id="@+id/numWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:gravity="right"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/btCalculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tvWeight2"
        android:layout_width="33dp"
        android:layout_height="33dp"
        android:layout_marginStart="8dp"
        android:text="@string/tv_Weight_2"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/numWeight"
        app:layout_constraintStart_toEndOf="@+id/numWeight"
        app:layout_constraintTop_toTopOf="@+id/numWeight" />

    <Button
        android:id="@+id/btCalculate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/bt_cul"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btClear"
        app:layout_constraintEnd_toEndOf="@+id/tvWeight2"
        app:layout_constraintStart_toStartOf="@+id/tvWeight1" />

    <Button
        android:id="@+id/btClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/bt_clear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvHight2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/tv_Hight_2"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/numHight"
        app:layout_constraintStart_toEndOf="@+id/numHight"
        app:layout_constraintTop_toTopOf="@+id/numHight" />

</androidx.constraintlayout.widget.ConstraintLayout>